now the error label shows up if the password is incorrect

--- a/src/ui/style.css
+++ b/src/ui/style.css
@@ -2,6 +2,10 @@
     border-radius: 16px;
 }
 
+.error-label {
+    font-size: small;
+}
+
 .background-window {
     background-color: rgba(0,0,0,0.7);
 }
